JSW Devsb/src/objects/Customer_Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>District_Code__c +&apos;:&apos;+ CASESAFEID(Customer__c)+&apos;:&apos;+ Product__c +&apos;:&apos;+ Distribution_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Incentives</relationshipLabel>
        <relationshipName>Customer_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>